<resources>
    <string name="app_name">nmaroulis</string>
    <string name="title_home">Αρχική</string>
    <string name="title_post">Ανάρτηση</string>
    <string name="title_notifications">Ειδοποιήσεις</string>
    <string name="title_connections">Δίκτυο</string>
    <string name="title_ads">Αγγελίες</string>
    <string name="title_profile">Προφίλ</string>
    <string name="title_chat">Επικοινωνία</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Καλωσήρθες "</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>