<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home"
        />

    <item
        android:id="@+id/navigation_post"
        android:icon="@drawable/ic_post_black_24dp"
        android:title="@string/title_post"
        app:showAsAction="never" />

    <item
        android:id="@+id/navigation_connections"
        android:icon="@drawable/ic_connections_black_24dp"
        android:title="@string/title_connections" />

    <item
        android:id="@+id/navigation_ads"
        android:icon="@drawable/ic_ads_black_24dp"
        android:title="@string/title_ads" />

<!--    <item-->
<!--        android:id="@+id/navigation_notifications"-->
<!--        android:icon="@drawable/ic_notifications_black_24dp"-->
<!--        android:title="@string/title_notifications" />-->

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile_black_24dp"
        android:title="@string/title_profile" />
</menu>